--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
+    "redux": "^5.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
