--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "redux": "^5.0.1",
+    "sweetalert2": "^11.15.10",
     "yup": "^1.4.0"
   },
   "devDependencies": {
