add activity data

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_API_SERVICES="http://localhost:3001/"
+VITE_API_SERVICES="https://157e-115-31-137-99.ngrok-free.app"
 VITE_APP_MODE=development
